add ogd data loading

--- a/MCH-Impact-Oriented-Warnings/severity-forecast-to-impact.ipynb
+++ b/MCH-Impact-Oriented-Warnings/severity-forecast-to-impact.ipynb
@@ -15,13 +15,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reuquires the package `meteodata-lab`.\n",
+    "\n",
+    "Check out\n",
+    "*  https://github.com/MeteoSwiss/meteodata-lab and \n",
+    "* https://github.com/MeteoSwiss/opendata-nwp-demos/blob/main/01_retrieve_process_precip.ipynb \n",
+    "\n",
+    "on info and notebooks on how to retrieve MeteoSwiss OGD forecast data.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import xarray as xr\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import numbers\n",
+    "from meteodatalab import ogd_api\n",
+    "from meteodatalab.operators import time_operators as time_ops\n",
+    "from earthkit.data import config\n",
+    "\n",
+    "config.set(\"cache-policy\", \"temporary\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define target lead times ICON2: 5d, here +0h, to +48h\n",
+    "lead_times = [f\"P0DT{i}H\" for i in np.arange(0, 49)]\n",
+    "model = \"ogd-forecasting-icon-ch2\"\n",
+    "nwp_vars = [\"TOT_PREC\", \"T_2M\", 'VMAX_10M']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                                                                 \r"
+     ]
+    }
+   ],
+   "source": [
+    "dict_ens_data = {}\n",
+    "for var in nwp_vars:\n",
+    "    req = ogd_api.Request(\n",
+    "        collection=model,\n",
+    "        variable=var,\n",
+    "        ref_time=\"latest\",\n",
+    "        perturbed=True,  #ensembles\n",
+    "        lead_time=lead_times,\n",
+    "    )\n",
+    "    dict_ens_data[var] = ogd_api.get_from_ogd(req)\n",
+    "\n",
+    "dict_ens_data['TOT_PREC'] = time_ops.delta(dict_ens_data['TOT_PREC'],\n",
+    "                                           np.timedelta64(1, \"h\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write to file (remove problematic attributes first)\n",
+    "data_path = '/home/muh/data/haz_files/icon/'\n",
+    "\n",
+    "\n",
+    "def clean_attrs(data_array):\n",
+    "    \"\"\"\n",
+    "    Recursively cleans all attributes in a DataArray (data, coordinates, and encoding).\n",
+    "    \"\"\"\n",
+    "    valid_types = (str, numbers.Number, np.ndarray, list, tuple, bytes,\n",
+    "                   type(None), np.integer, np.floating)\n",
+    "\n",
+    "    # Clean main data attributes\n",
+    "    data_array.attrs = {\n",
+    "        k: v\n",
+    "        for k, v in data_array.attrs.items() if isinstance(v, valid_types)\n",
+    "    }\n",
+    "\n",
+    "    # Clean coordinate attributes\n",
+    "    for coord_name in data_array.coords:\n",
+    "        coord = data_array.coords[coord_name]\n",
+    "        problematic = [\n",
+    "            k for k, v in coord.attrs.items()\n",
+    "            if not isinstance(v, valid_types)\n",
+    "        ]\n",
+    "        for key in problematic:\n",
+    "            print(\n",
+    "                f\"Removing coord attr '{coord_name}.{key}': {type(coord.attrs[key])}\"\n",
+    "            )\n",
+    "            del coord.attrs[key]\n",
+    "\n",
+    "    # Clean encoding\n",
+    "    data_array.encoding = {\n",
+    "        k: v\n",
+    "        for k, v in data_array.encoding.items() if isinstance(v, valid_types)\n",
+    "    }\n",
+    "\n",
+    "    return data_array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removing coord attr 'lon.metadata': <class 'earthkit.data.core.metadata.WrappedMetadata'>\n",
+      "Removing coord attr 'lon.parameter': <class 'dict'>\n",
+      "Removing coord attr 'lon.geography': <class 'dict'>\n",
+      "Removing coord attr 'lat.metadata': <class 'earthkit.data.core.metadata.WrappedMetadata'>\n",
+      "Removing coord attr 'lat.parameter': <class 'dict'>\n",
+      "Removing coord attr 'lat.geography': <class 'dict'>\n",
+      "Removing coord attr 'lon.metadata': <class 'earthkit.data.core.metadata.WrappedMetadata'>\n",
+      "Removing coord attr 'lon.parameter': <class 'dict'>\n",
+      "Removing coord attr 'lon.geography': <class 'dict'>\n",
+      "Removing coord attr 'lat.metadata': <class 'earthkit.data.core.metadata.WrappedMetadata'>\n",
+      "Removing coord attr 'lat.parameter': <class 'dict'>\n",
+      "Removing coord attr 'lat.geography': <class 'dict'>\n",
+      "Removing coord attr 'lon.metadata': <class 'earthkit.data.core.metadata.WrappedMetadata'>\n",
+      "Removing coord attr 'lon.parameter': <class 'dict'>\n",
+      "Removing coord attr 'lon.geography': <class 'dict'>\n",
+      "Removing coord attr 'lat.metadata': <class 'earthkit.data.core.metadata.WrappedMetadata'>\n",
+      "Removing coord attr 'lat.parameter': <class 'dict'>\n",
+      "Removing coord attr 'lat.geography': <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for var, data in dict_ens_data.items():\n",
+    "    data = clean_attrs(data)\n",
+    "    data.to_netcdf(f\"{data_path}icon-ch2-ens-{var.lower()}-latest.nc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For simple warning use case:\n",
+    "\n",
+    "Skip NWP data loading and load \"raw EWI severitylevel forecast [1-5] (demo subset for 5 leadtimes x 5 ensemble members)\""
    ]
   },
   {
@@ -621,7 +771,7 @@
     }
    ],
    "source": [
-    "# load \"raw EWI severitylevel forecast [1-5] (demo subset for 5 leadtimes x 5 ensemble members)\"\n",
+    "\n",
     "ds_severity = xr.load_dataset('ewi-wind-severitylevels-fordemo.nc')\n",
     "ds_severity = ds_severity.squeeze()\n",
     "ds_severity\n"
