MCH-Impact-Oriented-Warnings/severity-forecast-to-impact.ipynb

--- a/MCH-Impact-Oriented-Warnings/severity-forecast-to-impact.ipynb
+++ b/MCH-Impact-Oriented-Warnings/severity-forecast-to-impact.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Impact-oriented warnings from severity level forecasts"
+    "## Epic 1: Simplest ImpForecast pipeline: \n",
+    "## Story: Mapping severity level forecasts onto Exposures\n",
+    "\n",
+    "This use case uses \"full\", \"continuous\" forecast data (1 hazard variable, continuous leadtimes for all ens. members) and simply goes once through the pipeline of mapping hazard, vulnerability & exposure."
    ]
   },
   {
@@ -18,7 +21,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reuquires the package `meteodata-lab`.\n",
+    "Can be skipped and loaded from sample data in cells below.\n",
+    "\n",
+    "\n",
+    "Requires the package `meteodata-lab`.\n",
     "\n",
     "Check out\n",
     "*  https://github.com/MeteoSwiss/meteodata-lab and \n",
@@ -29,13 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import xarray as xr\n",
     "import numpy as np\n",
     "import numbers\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cartopy.crs as ccrs\n",
+    "\n",
+    "\n",
     "from meteodatalab import ogd_api\n",
     "from meteodatalab.operators import time_operators as time_ops\n",
     "from earthkit.data import config\n",
@@ -45,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,9 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For simple warning use case:\n",
-    "\n",
-    "Skip NWP data loading and load \"raw EWI severitylevel forecast [1-5] (demo subset for 5 leadtimes x 5 ensemble members)\""
+    "For simple demo: Skip NWP data loading and load \"raw EWI severitylevel forecast [1-5] (demo subset for 5 leadtimes x 5 ensemble members)\""
    ]
   },
   {
@@ -1622,6 +1630,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "* in the original impact format, one event is now one leadtime of one ensemble member impact stats per leadtime or per ensemble member are not easily accessible; leadtime and ensemble info can be obtained again by decoding the event name string, but it's cumbersome"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1648,18 +1664,24 @@
     }
    ],
    "source": [
-    "# in the original impact format, one event is now one leadtime of one ensemble member\n",
-    "# impact stats per leadtime or per ensemble member are not easily accessible\n",
-    "level = 2\n",
     "# for instance, this would be leadtime 0 of ensemble 0\n",
-    "dict_imp_pop[level].plot_hexbin_impact_exposure(event_id=haz.event_id[0])\n",
     "\n",
-    "# leadtime and ensemble info can be obtained again by decoding the event name string, but it's cumbersome"
+    "level = 2\n",
+    "dict_imp_pop[level].plot_hexbin_impact_exposure(event_id=haz.event_id[0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* in the reformatted xarray dataset, stats over leadtime or over ensemble member are easily possible, but we lose the convenience functions of the CLIMADA Impact Object\n",
+    "\n",
+    "* we need to do a lot of manual track-keeping on the stacking order of the dimensions, and on correcting the frequency setting (true in either case)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1684,15 +1706,6 @@
     }
    ],
    "source": [
-    "# in the reformatted xarray dataset, stats over leadtime or over ensemble member are easily possible,\n",
-    "# but we lose the convenience functions of the CLIMADA Impact Object\n",
-    "\n",
-    "# we need to do a lot of manual track-keeping on the stacking order of the dimensions,\n",
-    "# and on correcting the frequency setting (true in either case).\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import cartopy.crs as ccrs\n",
-    "\n",
     "# example for one realization over all leadtimes\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(8, 6),\n",
@@ -1706,7 +1719,7 @@
     "    transform=ccrs.PlateCarree())\n",
     "plt.colorbar(sc, ax=ax, label=\"impact\")\n",
     "ax.coastlines()\n",
-    "ax.set_title(f\"Max exposed ppl to warning level ({level})\")\n"
+    "ax.set_title(f\"Max exposed ppl to warning level ({level}) over all leadtimes, for ensemble 0\")\n"
    ]
   },
   {
@@ -1714,7 +1727,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# example for one leadtime over all realizations\n",
+    "fig, ax = plt.subplots(figsize=(8, 6),\n",
+    "                       subplot_kw={'projection': ccrs.PlateCarree()})\n",
+    "sc = ax.scatter(\n",
+    "    dict_imp_reshaped[level].coords[\"y\"],\n",
+    "    dict_imp_reshaped[level].coords[\"x\"],\n",
+    "    c=dict_imp_reshaped[level].max(dim='realization').isel(lead_times=3),\n",
+    "    cmap=\"viridis\",\n",
+    "    s=5,\n",
+    "    transform=ccrs.PlateCarree())\n",
+    "plt.colorbar(sc, ax=ax, label=\"impact\")\n",
+    "ax.coastlines()\n",
+    "ax.set_title(f\"Max exposed ppl to warning level ({level}) at leadtime 3, over all ensembles\")"
+   ]
   }
  ],
  "metadata": {
